src/test/deca/syntax/invalid/custom/list_expr_nocoma3.deca


{
printx(1,2 3);
}